# interpreter

./: Fox.cf  Makefile  README.md  fox.cabal  test.sh
bad/: 00_grammar_1.fox  00_grammar_2.err  00_grammar_2.fox  00_grammar_3.fox  10_divideby0_1.err  10_divideby0_1.fox  12_EQU_18.err  12_EQU_18.fox  12_MINUS_21.err  12_MINUS_21.fox  12_MUL_24.err  12_MUL_24.fox  12_NEG_26.err  12_NEG_26.fox  12_NE_17.err  12_NE_17.fox  12_NOT_25.err  12_NOT_25.fox  12_ORD_19.err  12_ORD_19.fox  12_ORD_20.err  12_ORD_20.fox  12_PLUS_22.err  12_PLUS_22.fox  12_PLUS_23.err  12_PLUS_23.fox  12_and_15.err  12_and_15.fox  12_ass_2.err  12_ass_2.fox  12_ass_3.err  12_decl_1.err  12_decl_1.fox  12_fun_10.err  12_fun_10.fox  12_fun_11.err  12_fun_11.fox  12_fun_12.err  12_fun_12.fox  12_fun_13.fox  (+18 more)
declaration/: Fox.cf  Fox.md  Makefile  Makefile.bak  tabelka-cech-imp2023.txt
declaration/Fox/: Abs.hi  Abs.hs  Abs.hs.bak  Doc.txt  Doc.txt.bak  ErrM.hs  ErrM.hs.bak  Lex.hi  Lex.x  Lex.x.bak  Par.hi  Par.hs  Par.info  Par.y  Test  (+9 more)
good/: 01_types_1.fox  01_types_1.out  02_arithmetic_1.fox  02_arithmetic_1.out  02_comparisons_2.fox  02_comparisons_2.out  03_assignments_1.fox  03_assignments_1.out  04_print_1.fox  04_print_1.out  05_if_1.fox  05_ifelse_2.fox  05_while_3.fox  06_fun_1.fox  06_fun_1.out  06_fun_2.fox  06_rec_2.fox  06_rec_2.out  07_val_2.fox  07_var_1.fox  09_overriding_1.fox  09_static_2.fox  11_fun_1.fox  11_fun_1.out  13_nesting_1.fox  13_nesting_1.out  13_nesting_2.fox  13_nesting_2.out  13_static.fox  13_static.out
src/: Interpreter.hs  Main  Main.hi  Main.hs  TypeChecker.hs
(+14 files in other folders)
