name:           interpreter
version:        0.1.0.0
cabal-version:  >= 1.10
build-type:     Simple

executable interpreter
  main-is:       Main.hs
  hs-source-dirs:
    src
    src/generated
  other-modules:
    Fox.Abs
    Fox.Par
    Fox.ErrM
    Fox.Lex
    TypeChecker
    Interpreter
  build-depends:
    base >= 4.7 && < 5, array, containers, mtl
  default-language: Haskell2010
